--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -89,6 +89,22 @@ a {
     width: 100%;
 }
 
+.mat-input-container-error {
+    .mat-input-underline {
+        border: none;
+        border-top: 2px solid red;
+    }
+    .mat-hint {
+        color: red;
+    }
+    .mat-input-ripple {
+        background-color: rgba(0,0,0,0) !important;
+    }
+    .mat-input-placeholder {
+        color: red;
+    }
+}
+
 .unselectable {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -109,6 +125,18 @@ a {
     padding: 0 16px;
 }
 
+.sub-navbar {
+background-color:rebeccapurple;height:128px;
+}
+
+.sub-navbar-title {
+    font-weight: 400;
+    font-size: 24px;
+    padding: 72px 0px 0 120px;
+    height: 160px;
+    color: white;
+}
+
 .section-single {
     margin: 24px;
     padding: 0 !important;
@@ -127,10 +155,9 @@ a {
 
 .section-title {
     font-weight: 400;
-    font-size: 24px;
-    padding: 72px 0px 0 120px;
-    height: 160px;
-    color: white;
+    font-weight: normal;
+    font-size: 20px;
+    padding: 24px;
 }
 
 .section-subtitle {
@@ -179,7 +206,7 @@ a {
     height: 56px;
     text-align: left;
     padding-top: 16px;
-    border-bottom: solid 1px rgba(0,0,0,0.12);
+    border-bottom: 1px solid rgba(0,0,0,0.12);
 }
 
 .data-table-header-label {
@@ -245,7 +272,7 @@ a {
     height: 48px;
     padding-top: 16px;
     background: #FFF;
-    border-top: solid 1px rgba(0,0,0,0.12);
+    border-top: 1px solid rgba(0,0,0,0.12);
     transition: background 0.1s linear;
 }
 
