updated some css

--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -33,7 +33,7 @@
 
 .nav-logo{
 	background: linear-gradient(90deg, rebeccapurple, mediumorchid);
-	border-bottom: solid 1px rgba(0,0,0,0.12);
+	border-bottom: 1px solid rgba(0,0,0,0.12);
 	margin-bottom: 8px;
 }
 
@@ -61,7 +61,7 @@
 	font-size: 14px;
 	font-weight: 500;
 	background: white;
-	border-bottom: solid 1px lightgray;
+	border-bottom: 1px solid lightgray;
 	cursor: pointer;
 }
 
