--- a/client/src/app/components/unverified-data/assign-ime-number-dialog/assign-ime-number-dialog.component.scss
+++ b/client/src/app/components/unverified-data/assign-ime-number-dialog/assign-ime-number-dialog.component.scss
@@ -5,13 +5,13 @@ $ime-number-add-remove-button-width: 50px;
 	height: 250px;
 	overflow-y: auto;
 	margin: 8px 0;
-	border-top: solid 1px rgba(0,0,0,0.12);
-	border-bottom: solid 1px rgba(0,0,0,0.12);
+	border-top: 1px solid rgba(0,0,0,0.12);
+	border-bottom: 1px solid rgba(0,0,0,0.12);
 }
 
 .ime-number-container {
 	width: 100%;
-	border-bottom: solid 1px rgba(0,0,0,0.12);
+	border-bottom: 1px solid rgba(0,0,0,0.12);
 	background: #FFF;
 	transition: background 0.2s linear;
 }
