--- a/client/src/app/components/user/user-group-selector/user-group-selector.component.scss
+++ b/client/src/app/components/user/user-group-selector/user-group-selector.component.scss
@@ -5,13 +5,13 @@ $group-add-remove-button-width: 50px;
 	height: 320px;
 	overflow-y: auto;
 	margin: 8px 0;
-	border-top: solid 1px rgba(0,0,0,0.12);
-	border-bottom: solid 1px rgba(0,0,0,0.12);
+	border-top: 1px solid rgba(0,0,0,0.12);
+	border-bottom: 1px solid rgba(0,0,0,0.12);
 }
 
 .group-container {
 	width: 100%;
-	border-bottom: solid 1px rgba(0,0,0,0.12);
+	border-bottom: 1px solid rgba(0,0,0,0.12);
 	background: #FFF;
 	transition: background 0.2s linear;
 }
