--- a/client/src/app/components/public/login/login.component.html
+++ b/client/src/app/components/public/login/login.component.html
@@ -17,7 +17,7 @@
 						<input type="password" [(ngModel)]="credentials.password" mdInput placeholder="Password" (keyup.enter)="login()">
 					</md-input-container>
 				</div>
-				<button md-raised-button color="warn" class="login-button" (click)="login()">LOGIN</button>
+				<button md-raised-button color="accent" class="login-button" (click)="login()">LOGIN</button>
 			</md-card-content>
 			<md-card-footer>
 				<div class="app-info unselectable">Version: 0.0.16-SNAPSHOT</div>
