--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -1,4 +1,4 @@
-<md-toolbar color="primary">
+<md-toolbar>
 	<div class="toolbar-content flex-container" fxLayout="row" fxLayoutAlign="space-between center">
 		<div class="flex-item" fxFlex="40px">
 			<button md-icon-button (click)="sidenav.toggle()">
@@ -11,7 +11,7 @@
 			</a>
 		</div>
 		<div class="flex-item" fxFlex="100px">
-			<button md-raised-button color="warn" (click)="logout()">LOGOUT</button>
+			<button md-raised-button color="accent" (click)="logout()">LOGOUT</button>
 		</div>
 	</div>
 	<div class="navbar-shadow"></div>
