--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -1,82 +1,5 @@
 @import '../../../app-theme.scss';
 
-.toolbar-content {
-	width: 100%;
-}
-
-.logo-container {
-	a {
-		margin-left: 16px;
-		img {
-			height: 56px;
-			margin-top: 4px;
-		}
-	}
-}
-
-.sidenav-contents {
+.navdrawer-contents {
 	width: 250px;
-}
-
-.nav-subtitle {
-	height: 64px;
-	padding: 8px 0 16px 16px;
-	.nav-subtitle-name {
-		font-size: 14px;
-		font-weight: 500;
-		color: #FFF;
-	}
-	.nav-subtitle-email {
-		font-size: 14px;
-		font-weight: 400px;
-		color: #FFF;
-	}
-}
-
-.nav-logo {
-	background: linear-gradient(90deg, mat-color($app-primary, 800), mat-color($app-primary, 400));
-	border-bottom: 1px solid rgba(0,0,0,0.12);
-	margin-bottom: 8px;
-}
-
-.la-logo {
-	width: 86px;
-    padding: 16px 0 4px 16px;
-}
-
-.sidenav-section {
-
-}
-
-.sidenav-section-header {
-	color: #fff;
-    background: #999;
-    font-size: 0.8rem;
-    padding: 3px 20px;
-	text-transform: uppercase;
-}
-
-.sidenav-link {
-	outline: none;
-	height: 48px;
-	color: rgba(0,0,0,0.87);
-	font-size: 14px;
-	font-weight: 500;
-	background: white;
-	border-bottom: 1px solid lightgray;
-	cursor: pointer;
-}
-
-.sidenav-link:hover {
-	background: #EEE;
-}
-
-.sidenav-link-active, .sidenav-link-active:hover {
-	background: mat-color($app-accent);
-	font-weight: bold;
-}
-
-.sidenav-link-icon {
-	color: rgba(0,0,0,0.54);
-	padding-left: 16px;
 }
