--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.html
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.html
@@ -1,70 +1,28 @@
-<md-toolbar>
-	<div class="toolbar-content flex-container" fxLayout="row" fxLayoutAlign="space-between center">
-		<div class="flex-item" fxFlex="40px">
-			<button md-icon-button (click)="sidenav.toggle()">
-				<md-icon>menu</md-icon>
-			</button>
-		</div>
-		<div class="logo-container flex-item" fxFlex>
-			<a routerLink="dashboard" routerLikeActive="active">
-				<img [src]="logoUrl">
-			</a>
-		</div>
-		<div class="flex-item" fxFlex="100px">
-			<button md-raised-button color="accent" (click)="logout()">LOGOUT</button>
-		</div>
-	</div>
-	<div class="navbar-shadow"></div>
-</md-toolbar>
-<md-sidenav-container fullscreen class="primary-sidenav-container">
-	<md-sidenav #sidenav mode="side" opened="true" class="sidenav-contents">
-		<div>
-			<div class="nav-logo unselectable">
-				<div>
-					<picture>				
-						<img class="la-logo" [src]="citySealUrl"/>			
-					</picture>
-				</div>
-				<div class="nav-subtitle flex-container" fxLayout="column" fxLayoutAlign="space-around start">
-					<div class="nav-subtitle-name flex-item">{{userName}}</div>
-					<div class="nav-subtitle-email flex-item">{{userEmail}}</div>
-				</div>
-			<!--</div>
-				<div class="sidenav-section-header">
-					{{section.name}}
-				</div>
-				<div *ngFor="let link of section.links">
-					<div *ngIf="link.visible" 
-						[routerLink]="link.route.path" 
-						routerLinkActive="sidenav-link-active" 
-						class="sidenav-link flex-container"
-						fxLayout="row"
-						fxLayoutAlign=" center">
-						<md-icon class="sidenav-link-icon flex-item" fxFlex="64px">{{link.icon}}</md-icon>
-						<div class="flex-item" fxFlex>{{link.label}}</div>
-					</div>
-				</div>-->
-			</div>
 
-
-
-			<!-- TEMPORARY -->
-			<div *ngFor="let link of tempLinks">
-				<div *ngIf="link.visible" 
-					[routerLink]="link.route.path" 
-					routerLinkActive="sidenav-link-active" 
-					class="sidenav-link flex-container"
-					fxLayout="row"
-					fxLayoutAlign=" center"
-					style="border-bottom: solid 0px lightgray;">
-					<md-icon class="sidenav-link-icon flex-item" fxFlex="72px">{{link.icon}}</md-icon>
-					<div class="flex-item" fxFlex>{{link.label}}</div>
-				</div>
-			</div>
-
-
-
-		</div>
+<md-sidenav-container fullscreen class="navdrawer-container">
+	<md-sidenav #navdrawer mode="side" opened="true" class="navdrawer-contents">
+		<app-navigation-drawer></app-navigation-drawer>
 	</md-sidenav>
-	<router-outlet></router-outlet>
+	<md-sidenav-container  class="sideinfo-container" fullscreen>
+		<md-sidenav #sideinfo mode="side" align="end" opened="true" class="navdrawer-contents">
+			<div class="sideinfo-header">
+				<div class="sideinfo-header-title">
+					User Info
+				</div>
+				<div *ngIf="selectedUser" class="sideinfo-header-subtitle">
+					{{selectedUser.firstname}} {{selectedUser.lastname}}
+				</div>
+			</div>
+			<div *ngIf="!selectedUser">
+				Select a user to view their details.
+			</div>
+			<div *ngIf="selectedUser">
+				{{selectedUser.username}}
+			</div>
+		</md-sidenav>
+		<app-navigation-toolbar [navdrawer]="navdrawer"></app-navigation-toolbar>
+		<div class="main-content">
+			<router-outlet></router-outlet>
+		</div>
+	</md-sidenav-container>
 </md-sidenav-container>
