--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -1,4 +1,4 @@
-<md-sidenav-container  class="sideinfo-container" fullscreen>
+<!--<md-sidenav-container  class="sideinfo-container" fullscreen>
 	<md-sidenav #sideinfo mode="side" align="end" (opened)="showSideInfo" class="sidenav-contents">
 		<div class="sideinfo-header">
 			<div class="sideinfo-header-title">
@@ -14,7 +14,7 @@
 		<div *ngIf="selectedUser">
 			{{selectedUser.username}}
 		</div>
-	</md-sidenav>
+	</md-sidenav>-->
 	<div style="height:calc(100% - 193px);">
 		<div class="fab-top-container">
 			<button md-fab (click)="openNewUserDialog()" mdTooltip="New User" mdTooltipPosition="below">
@@ -119,7 +119,7 @@
 						(click)="selectUser(user)"
 						[ngClass]="{'data-table-row-content-active': user === selectedUser}">
 						<div class="data-table-first-column truncate flex-item" fxFlex="10">
-							<a [routerLink]="'../user/' + user.username" routerLikeActive="active">
+							<a [routerLink]="user.username" routerLikeActive="active">
 								{{user.username}}
 							</a>
 						</div>
@@ -147,4 +147,4 @@
 			</app-pagination>
 		</div>
 	</div>
-</md-sidenav-container>
+<!--</md-sidenav-container>-->
