--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -3,3 +3,8 @@
 .navdrawer-contents {
 	width: 250px;
 }
+
+.sideinfo-contents {
+	background: #EEE !important;
+	width: 320px; // TODO Make this dynamic.
+}
