--- a/client/src/app/components/navigation/navigation-drawer/navigation-drawer.component.scss
+++ b/client/src/app/components/navigation/navigation-drawer/navigation-drawer.component.scss
@@ -45,7 +45,7 @@
 	font-size: 14px;
 	font-weight: 500;
 	background: white;
-	border-bottom: 1px solid lightgray;
+	// border-bottom: 1px solid lightgray;
 	cursor: pointer;
 }
 
