minor css changes

--- a/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.scss
+++ b/client/src/app/components/navigation/navigation-toolbar/navigation-toolbar.component.scss
@@ -12,8 +12,10 @@
 .navbar-title {
 	color: #FFF;
 	margin-left: 24px;
+
+	// Does not follow material guidelines, but looks better.
 	// font-size: 18px;
-	// font-weight: 400
+	font-weight: 400
 }
 
 .logo-container {
