--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -5,14 +5,22 @@
 	</div>
 	<div *ngIf="isDataLoaded" class="data-table-scrollable">
 		<div class="data-table-filter-container flex-container" fxLayout="row" fxLayoutAlign="end center">
-			<div class="flex-item" fxFlex="152px"></div>
-			<md-input-container *ngIf="showFilters" 
-				[hintLabel]="textFilterStatus.errorMessage" 
-				class="flex-item" 
-				fxFlex
-				[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
-				<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
-			</md-input-container>
+			<!--<div *ngIf="!showFilters" class="flex-item" fxFlex></div>-->
+			<div *ngIf="showFilters" class="flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
+				<div class="flex-item" fxFlex="152px"></div>
+				<md-input-container *ngIf="showFilters" 
+					[hintLabel]="textFilterStatus.errorMessage" 
+					class="mat-input-container-inline flex-item" 
+					fxFlex
+					[ngClass]="{'mat-input-container-error':!textFilterStatus.valid}">
+					<input mdInput placeholder="Search" [(ngModel)]="filters.text" (ngModelChange)="applyFilters()">
+				</md-input-container>
+				<md-select [(ngModel)]="filters.status" placeholder="Status" class="mat-select-inline flex-item" fxFlex="150px" (ngModelChange)="applyFilters()">
+					<md-option *ngFor="let status of statusFilterChoices" [value]="status.value">
+						{{status.label}}
+					</md-option>
+				</md-select>
+			</div>
 			<button md-icon-button 
 				(click)="toggleFilters()" 
 				class="flex-item" 
