--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -4,9 +4,8 @@
 		<div class="loading-indicator-message">{{loadingMessage}}</div>
 	</div>
 	<div *ngIf="isDataLoaded" class="data-table-scrollable">
-		<div class="data-table-filter-container flex-container" fxLayout="row" fxLayoutAlign="end center">
-			<!--<div *ngIf="!showFilters" class="flex-item" fxFlex></div>-->
-			<div *ngIf="showFilters" class="flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
+		<div class="data-table-filter-container-row flex-container" fxLayout="row" fxLayoutAlign="end center">
+			<div *ngIf="showFilters" class="data-table-filter-container flex-item flex-container" fxFlex fxLayout="row" fxLayoutAlign="end center">
 				<div class="flex-item" fxFlex="152px"></div>
 				<md-input-container *ngIf="showFilters" 
 					[hintLabel]="textFilterStatus.errorMessage" 
