--- a/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
+++ b/client/src/app/components/navigation/navigation-base/navigation-base.component.scss
@@ -5,6 +5,6 @@
 }
 
 .sideinfo-contents {
-	background: #EEE !important;
+	background: #F7F7F7 !important;
 	width: 320px; // TODO Make this dynamic.
 }
