--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -83,7 +83,7 @@
 				</md-icon>
 			</div>
 			<div class="data-table-last-column truncate flex-item" fxFlex="40px" style="text-align:center;">
-				<span class="data-table-header-label">Active</span>
+				<span class="data-table-header-label">Status</span>
 			</div>
 		</div>
 		<div class="data-table-scrollable-area">
