--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -27,9 +27,9 @@ a {
 }
 
 .navdrawer-container {
-    background: #EEE !important;
     // top: $navbar-height !important;
     .mat-sidenav-opened {
+        overflow: hidden;
         box-shadow: 3px 0 6px rgba(0,0,0,0.24) !important;
     }
     .mat-sidenav-backdrop.mat-sidenav-shown {
@@ -71,6 +71,57 @@ a {
     color: rgba(255,255,255,0.54);
     font-size: 14px;
     padding-left: 24px;
+}
+
+.sideinfo-sections-container {
+    width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    overflow-y: overlay;
+    .sideinfo-section:first-child {
+        border-top: none;
+    }
+}
+
+.sideinfo-section {
+    border-top: 1px solid rgba(0,0,0,0.12);
+    padding: 8px 32px 24px 32px;
+}
+
+.sideinfo-section-header {
+    line-height: 48px;
+    font-size: 13px;
+    font-weight: 500;
+    color: rgba(0,0,0,0.54);
+}
+
+.sideinfo-section-data-row {
+    height: 28px;
+}
+
+.sideinfo-section-data-key {
+    font-size: 13px;
+    font-weight: 400;
+    color: rgba(0,0,0,0.87);
+}
+
+.sideinfo-section-data-value {
+    font-size: 13px;
+    font-weight: 400;
+    color: rgba(0,0,0,0.54);
+}
+
+.sideinfo-section-data-list-item {
+    line-height: 28px;
+    font-size: 13px;
+    font-weight: 400;
+    color: rgba(0,0,0,0.87);
+}
+
+.sideinfo-section-data-paragraph {
+    font-size: 13px;
+    font-weight: 400;
+    color: rgba(0,0,0,0.87);
 }
 
 .navbar {
